# kubevault

./: .commitlintrc.js  .deny.toml  .gitignore  .lefthook.toml  .mise.toml  Cargo.toml  LICENCE  README.md  k3d.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.devcontainer/config/: home.vscode..config.lazygit.config.yaml
.github/: labeler.yml  labels.yaml  release.yml
.github/workflows/: merge_group,pull_request.all.lint.yaml  merge_group,pull_request.rust.yaml  pull_request.automations.yaml  pull_request.rust.yaml  push,schedule.sync-labels.yaml  push.rust.yaml  push.trunk-cache.yaml  push.trunk_merge.yaml  release.publish-kubevault.yaml  security.workflows.yaml  workflow_call.rust.build.yaml  workflow_call.rust.coverage.yaml  workflow_call.rust.lint.yaml  workflow_call.rust.test.yaml
.mise/tasks/: release
.trunk/: gha.yaml  trunk.yaml
docs/assets/: kubevault.excalidraw
src/: cli.rs  lib.rs  main.rs
src/cli/: can_read_secret.rs  external_secret_store.rs  generate_manifests.rs  new_vault_directory.rs
tests/: cli.rs
tests/fixtures/: manifests.yaml  manifests_default.yaml
tests/fixtures/manifests/: access-control-alice.yaml  access-control-bob.yaml  access-control-charlie.yaml  secret-noproduction-applicationa-aws.yaml  secret-noproduction-applicationa-sendgrid.yaml  secret-noproduction-applicationb-cloudflare.yaml  secret-noproduction-applicationb-openai.yaml  secret-noproduction-applicationb-postgresql.yaml  secret-noproduction-infrastructurea-aws.yaml  secret-noproduction-users-alice.yaml  secret-noproduction-users-bob-passwords.yaml  secret-production-applicationa-aws.yaml  secret-production-applicationa-sendgrid.yaml  secret-production-applicationb-cloudflare.yaml  secret-production-applicationb-openai.yaml  secret-production-applicationb-postgresql.yaml  secret-production-infrastructurea-aws.yaml  secret-production-infrastructurea-onprem-datacentera-pin-code.yaml  secret-production-infrastructurea-onprem-datacenterb-pin-code.yaml  secret-production-users-bob.yaml  secret-production-users-charlie.yaml
tests/fixtures/vault/access_control/: alice  bob  charlie
(+10 files in other folders)
