# Copyright (C) 2024 Alexandre Nicolaie (xunleii@users.noreply.github.com)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ----------------------------------------------------------------------------

[package]
name = "kubevault"
version = "1.0.3"
description = "kubevault transforms a Kubernetes cluster into a secret management system."
authors = ["Alexandre Nicolaie <xunleii@users.noreply.github.com>"]
license = "Apache-2.0"
homepage = "https://github.com/chezmoi-sh/kubevault"
repository = "https://github.com/chezmoi-sh/kubevault"
keywords = ["kubernetes", "vault", "secret"]
categories = ["command-line-utilities"]
default-run = "kubevault"
edition = "2021"
rust-version = "1.74.1"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ version }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.i686-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.0", features = ["color", "derive", "env"] }
clap_complete = "4.5.12"
glob-match = "0.2.1"
k8s-openapi = { version = "0.22.0", features = ["v1_30"] }
lazy_static = "1.5.0"
owo-colors = "4.0.0"
regex = "1.6.0"
serde_yaml = "0.9.14"
walkdir = "2.3.2"

[dev-dependencies]
assert_cmd = { version = "2.0.15", features = ["color-auto"] }
assert_fs = "1.1.2"
predicates = "3.1.2"
similar-asserts = "1.5.0"
